<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/ColorInput"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:hint="Enter a Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/ShapeInput"
        android:layout_width="126dp"
        android:layout_height="64dp"
        android:hint="Enter a Shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ColorInput"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/btn"
        android:layout_width="177dp"
        android:layout_height="71dp"
        android:text="Press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShapeInput"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:hint="ShowShape"
        android:textAlignment="center"
        android:id="@+id/ShowShape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:layout_width="109dp"
        android:layout_height="66dp"
        android:hint="ShowColor"
        android:textAlignment="center"
        android:id="@+id/ShowColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowShape"
        app:layout_constraintVertical_bias="0.331" />

</androidx.constraintlayout.widget.ConstraintLayout>